src/index.css
:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: rgb(184, 255, 241);

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  margin: 0;
}
.circuitDrawing:nth-child(even) {
  background-color: rgb(247, 247, 247); /* Change this to your desired color */
}
.hoverDp {
  stroke: red;
}

.mr_lg {
  margin-right: 100px !important;
}

@media (max-width: 700px) {
  .mr_lg {
    margin-right: 0 !important;
  }
}

